--- a/style.css
+++ b/style.css
@@ -261,3 +261,19 @@ form .user-details .input-box{
 img {
   width: 10vh;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  text-decoration: underline;
+}
